--- a/New folder/index.html
+++ b/New folder/index.html
@@ -120,11 +120,11 @@
   </header>
 
   <div id="page1" class="section active fade">
-    <img src="Downloads/pic1.jpeg" alt="">
+    <img src="https://ik.imagekit.io/g84qftdbb/pic1.jpeg?updatedAt=1748591472789" alt="">
     <h2>Happy Birthday Meri Jaaan </h2>
     <p>Aaj ka din sirf tumhare liye hai. Tum meri har subah ki muskaan ho, har shaam ka sukoon ho. </p>
     <button onclick="goTo('page2')">Aage Barho Meri Jaan</button>
-  </div>
+   </div>
 
   <div id="page2" class="section fade">
     <h2>Tumse Hi Zindagi Hai</h2>
@@ -133,10 +133,10 @@
 Meri jaan, tumhari muskurahat mere har dard ka jawab hai
     </p>
     <div> 
-      <button onclick="alert('Mujhe Tumse Bohot Ishq Hai!')">Mujhe Tumse Ishq Hai</button>
+      <button onclick="alert('Mujhe Tumse Ishq Hai!')">Mujhe Tumse Ishq Hai</button>
       <button onclick="alert('Tum Bina Sab Khaali Lagta Hai')">Tum Bina Sab Khaali Hai</button>
       <button onclick="alert('Forever Together InshAllah')">Forever Together</button>
-    </div>
+    </div>  
     <button onclick="goTo('page3')">Aur Bhi Surprise Hai Click here </button>
   </div>
 
@@ -144,9 +144,9 @@ Meri jaan, tumhari muskurahat mere har dard ka jawab hai
     <h2>Tumhari Tasveerein</h2>
     <p>Har tasveer mein tum ho, mery pas duniya ki sabse khoobsurat tasveer h.</p>
     <div class="gallery">
-      <img src="Downloads/WhatsApp Image 2025-05-25 at 9.37.14 PM.jpeg">
-      <img src="Downloads/WhatsApp Image 2025-05-27 at 12.22.24 AM.jpeg" alt="">
-      <img src="Downloads/WhatsApp Image 2025-05-27 at 12.29.48 AM.jpeg">
+      <img src="https://ik.imagekit.io/g84qftdbb/WhatsApp%20Image%202025-05-27%20at%2012.22.24%20AM.jpeg?updatedAt=1748591567568">
+      <img src="https://ik.imagekit.io/g84qftdbb/WhatsApp%20Image%202025-05-25%20at%209.37.14%20PM.jpeg?updatedAt=1748591567619" alt="">
+      <img src="https://ik.imagekit.io/g84qftdbb/WhatsApp%20Image%202025-05-27%20at%2012.29.48%20AM.jpeg?updatedAt=1748591567774">
     </div>
     <p style="margin-top:40px">Ishq Mubarak, Dard Mubarak… Tere Ishq Mein Jeena Hai</p>
     <audio controls autoplay loop style="margin-top:20px">
