--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Meri jaan, tumhari muskurahat mere har dard ka jawab hai
     </div>
     <p style="margin-top:40px">Ishq Mubarak, Dard Mubarak… Tere Ishq Mein Jeena Hai</p>
     <audio controls autoplay loop style="margin-top:20px">
-      <source src="downloads/WhatsApp Audio 2025-05-25 at 10.45.43 PM.mpeg" type="audio/mpeg">
+      <source src="downloads/WhatsApp Audio 2025-06-02 at 1.32.17 AM.mpeg" type="audio/mpeg">
 
     </audio>
     <br><br>
